1998-10-29  Seth Alves  <alves@hungry.com>

	* gnome-paper-selector.c (set_widgets_from_paper): pulled common
	code into a subroutine
	(gnome_paper_selector_init): added widgets for margin sizes

1998-10-29    <jrb@redhat.com>

	* gnome-popup-help.c (gnome_widget_add_help_with_uidata): added some more
	sanity checking.
	(gnome_popup_help_place_window): removed print statements too

1998-10-29  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (gnome_popup_menu_attach): Use
	gtk_widget_add_events() instead of set_events() -- this lets us
	operate even on realized widgets.

1998-10-29    <jrb@aware-of-vacuity.labs.redhat.com>

	* gtk-socket.c: Remove #define DEBUG_PLUGSOCKET

1998-10-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.c (create_menu_item): i8l_label must be a
	string, not a GtkWidget *.

	* gnome-about.c (gnome_about_calc_size): Made static.
	(gnome_destroy_about): Likewise.

	* gnome-app.c (locations): Made const.

	* gnome-mdi.c (target_table): Made const.

	* gnome-client.c (arguments parser): Made const.

	* gnome-init.c (our_gtk_options our_gtk_parser): Made const.

	* makeenums.pl (parse_entries): Output the arrays of enumerations
	as const.

	* gnome-calculator.c (buttons): Made the buttons array const so
	that it can be shared.

	* gnome-lamp.c: Made the lamp data and enl_mappings const so that
	they can be shared.

	* gnome-stock.c (entries_data default_accel_hash): Made the list
	of entries const so that it can be shared between processes.

1998-10-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch] (gnome_mdi_register, gnome_mdi_unregister):
	changed parameter from GtkWidget*  to GtkObject*.

1998-10-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.c (get_bounds): New internal function to compute
	the bounding box of the icon text item.
	(recompute_bounding_box): Use get_bounds().
	(gnome_icon_text_item_get_type): The object initialization